# Goofy

./: .gitignore  CMakeLists.txt  README.md  init.sh  pkg.config
cli/: cover
src/: CMakeLists.txt
src/util/: ncECTool.cpp  ncECTool.h  ncGuid.cpp  ncGuid.h  ncLog.cpp  ncLog.h
test/: CMakeLists.txt
test/ut/: main.cpp  ncECToolUT.cpp  ncGuidUT.cpp
